<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anaekranadonFromyonetici"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yonetici_islemleri">

    <Button
        android:id="@+id/asci_guncelle"
        android:layout_width="141dp"
        android:layout_height="66dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginRight="227dp"
        android:layout_marginBottom="142dp"
        android:text="@string/asci_guncelle" />

    <Button
        android:id="@+id/yemek_ekle"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/yemek_ekle" />

    <Button
        android:id="@+id/yemek_sil"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="207dp"
        android:layout_marginLeft="207dp"
        android:layout_marginTop="226dp"
        android:text="@string/yemek_sil" />

    <Button
        android:id="@+id/asci_ekle"
        android:layout_width="132dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="153dp"
        android:text="@string/asci_ekle" />

    <Button
        android:id="@+id/asci_sil"
        android:layout_width="134dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="223dp"
        android:text="@string/asci_sil" />

    <EditText
        android:id="@+id/asci_adsoyad"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/asci_ad_soyad"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/asci_tc"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/asci_tc"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/asci_maas"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/asci_maas"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/yemek_fiyat"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:ems="10"
        android:hint="@string/yemek_tat"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/yemek_ad"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/yemek_ad_fiyat"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/yemek_ad_fiyat" />

    <Button
        android:id="@+id/asci_goruntule"
        android:layout_width="143dp"
        android:layout_height="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:layout_marginEnd="224dp"
        android:layout_marginRight="224dp"
        android:text="@string/ascilari_goruntule" />

    <Button
        android:id="@+id/yemek_goruntule"
        android:layout_width="153dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="64dp"
        android:text="@string/yemekleri_goruntule" />

    <Button
        android:id="@+id/yemek_guncelle"
        android:layout_width="154dp"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/yemek_guncelle" />

    <TextView
        android:id="@+id/advesoyad"
        android:layout_width="51dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="18dp"
        android:text="@string/ad_soyad" />

    <TextView
        android:id="@+id/tc"
        android:layout_width="43dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="65dp"
        android:text="@string/tcsi" />

    <TextView
        android:id="@+id/maas"
        android:layout_width="61dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="344dp"
        android:layout_marginRight="344dp"
        android:text="@string/maas" />

    <TextView
        android:id="@+id/tat"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="199dp"
        android:layout_marginLeft="199dp"
        android:layout_marginTop="78dp"
        android:text="Fiyat" />

    <TextView
        android:id="@+id/isimvefiyat"
        android:layout_width="35dp"
        android:layout_height="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="Ad" />

    <Button
        android:id="@+id/butongeridon"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginBottom="2dp"
        android:text="@string/geri_don" />

    <Button
        android:id="@+id/asci_ara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="455dp"
        android:text="Asci Ara" />

    <Button
        android:id="@+id/yemek_ara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="10dp"
        android:text="Yemek Ara" />

</RelativeLayout>