<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/yoneticigrs_buton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="42dp"
        android:layout_marginTop="265dp"
        android:importantForAutofill="no"
        android:text="@string/yonetici_girisi" />

    <Button
        android:id="@+id/musterigrs_buton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginBottom="261dp"
        android:importantForAutofill="no"
        android:text="@string/musteri_girisi" />

    <EditText
        android:id="@+id/yoneticiad"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:hint="@string/yonetici_ad"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/yoneticisifre"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:ems="10"
        android:hint="@string/yoneticisifre"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/yonetici_kayit"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="208dp"
        android:layout_marginLeft="208dp"
        android:layout_marginTop="265dp"
        android:text="@string/yonetici_kayit" />

    <TextView
        android:id="@+id/kullanici_adi"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="61dp"
        android:text="@string/kullanici_adi" />

    <TextView
        android:id="@+id/sifre"
        android:layout_width="49dp"
        android:layout_height="33dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="119dp"
        android:text="@string/sifre" />

</RelativeLayout>