<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".musteri_islemleri">

    <Button
        android:id="@+id/musteri_sil"
        android:layout_width="144dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="289dp"
        android:layout_marginEnd="229dp"
        android:layout_marginRight="229dp"
        android:text="@string/muster_s_l"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="79dp" />

    <Button
        android:id="@+id/musteri_guncelle"
        android:layout_width="148dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/musteri_guncelle"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="133dp" />

    <Button
        android:id="@+id/musteri_goster"
        android:layout_width="153dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="289dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/musterileri_goster"
        tools:layout_editor_absoluteX="189dp"
        tools:layout_editor_absoluteY="355dp" />

    <EditText
        android:id="@+id/musteri_tc"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:ems="10"
        android:hint="@string/musteri_tc"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/musteri_adsoyad"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/musteri_ad_soyad"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/adsoyad"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:text="@string/ad_soyad" />

    <TextView
        android:id="@+id/tcgiris"
        android:layout_width="25dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="75dp"
        android:text="@string/tc" />

    <Button
        android:id="@+id/buttongeridon"
        android:layout_width="152dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginBottom="7dp"
        android:text="@string/geri_don" />

    <EditText
        android:id="@+id/musteri_gelissaat"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="206dp"
        android:layout_marginRight="206dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/musteri_cikissaat"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="9dp"
        android:layout_marginRight="9dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="51dp" />

    <TextView
        android:layout_width="48dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="116dp"
        android:text="Gelis saati" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="38dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:text="Cikis saati" />

    <Button
        android:id="@+id/musteri_ekle"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginBottom="75dp"
        android:text="@string/musteri_ekle" />

    <Button
        android:id="@+id/musteri_ara"
        android:layout_width="147dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginBottom="232dp"
        android:text="Musteri Ara" />

</RelativeLayout>